Fix klevu-popup sizing and z-index

--- a/packages/klevu-ui/src/components/klevu-popup/klevu-popup.css
+++ b/packages/klevu-ui/src/components/klevu-popup/klevu-popup.css
@@ -52,4 +52,5 @@
 dialog {
   position: fixed;
   border: 0;
+  z-index: 1000;
 }
